# bridge-message-predicates

./: Cargo.toml  Forc.toml  README.md  fuel-toolchain.toml  script_tx compare.txt
.github/scripts/: fmt.sh  test.sh  verify_tag.sh
.github/workflows/: ci.yml
contract-message-executor/: Cargo.toml
contract-message-executor/src/: main.rs  utils.rs
contract-message-executor/src/utils/: builder.rs
contract-message-predicate/: Cargo.toml
contract-message-predicate/src/: contract_message_predicate.sw  contract_message_test.sw  lib.rs  main.rs  main.sw  predicate_asm.rs  script_asm.rs  transaction_utils.sw  utils.sw
contract-message-predicate/tests/: harness.rs
contract-message-predicate/tests/utils/: builder.rs  environment.rs
contract-message-receiver/src/: lib.sw
contract-message-script/src/: contract_message_script.sw  main.sw  transaction_utils.sw  utils.sw
contract-message-test/: Cargo.toml
contract-message-test/src/: contract_message_test.sw  contract_message_test_abi.sw  main.sw  test_abi.sw  transaction_utils.sw
contract-message-test/tests/: harness.rs
contract-message-test/tests/utils/: builder.rs  environment.rs  ext_fuel_core.rs  ext_sdk_provider.rs
