[workspace]
members = [
  "contract-message-predicate"
]

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/bridge-message-predicates"
rust-version = "1.68.0"
version = "0.1.0"

[workspace.dependencies]
fuel-contract-message-predicate = { version = "0.1.0", path = "./fuel-contract-message-predicate" }
