[package]
name = "contract-message-executor"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuel-core-interfaces = "0.10.1"
fuels = { version = "0.24", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
